# DATN

./: CMakeLists.txt  README.md  build_for_pi.sh  install_on_pi.sh  main.qml  resources.qrc  run_vibration.sh
cmake/: toolchain_pi_aarch64.cmake
inc/: AppController.h  MainWindow.h  Simulation.h
scripts/: build_for_pi.sh  install_on_pi.sh  package_for_pi.sh  run_vibration.sh
src/: AppController.cpp  DAQWorker.cpp  DAQWorker.h  MainWindow.cpp  Simulation.cpp  main.cpp  main_qml.cpp
src/styles/: dark.qss
